DEV-14 hero image set to display none when loaded at moble resolutions

--- a/source/css/scss/objects/_blocks.scss
+++ b/source/css/scss/objects/_blocks.scss
@@ -181,7 +181,9 @@
 	}
 	.b-thumb {
 		img {
+			display: none;
 			@media all and (min-width: $bp-med) {
+				display: block;
 				min-width: 600px;
 			}
 		}
