--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2549,13 +2549,18 @@ body .wrapper:first-child {
     overflow: hidden;
   }
 }
+/* line 183, scss/objects/_blocks.scss */
+.block-log-in .b-thumb img {
+  display: none;
+}
 @media all and (min-width: 480px) {
   /* line 183, scss/objects/_blocks.scss */
   .block-log-in .b-thumb img {
+    display: block;
     min-width: 600px;
   }
 }
-/* line 189, scss/objects/_blocks.scss */
+/* line 191, scss/objects/_blocks.scss */
 .block-log-in .b-text {
   width: 100%;
   padding: 1.2em 2.2em 0;
@@ -2565,7 +2570,7 @@ body .wrapper:first-child {
   text-align: left;
 }
 @media all and (min-width: 480px) {
-  /* line 189, scss/objects/_blocks.scss */
+  /* line 191, scss/objects/_blocks.scss */
   .block-log-in .b-text {
     width: 90%;
     height: 16em;
@@ -2577,54 +2582,54 @@ body .wrapper:first-child {
   }
 }
 @media all and (min-width: 720px) {
-  /* line 189, scss/objects/_blocks.scss */
+  /* line 191, scss/objects/_blocks.scss */
   .block-log-in .b-text {
     top: 36%;
   }
 }
 
 /*STYLEGUIDE PATTERNS REMOVE*/
-/* line 212, scss/objects/_blocks.scss */
+/* line 214, scss/objects/_blocks.scss */
 #sg-patterns #molecules-block-inset .b-text {
   max-width: 266px !important;
 }
 
 /*STYLEGUIDE PATTERNS REMOVE END*/
 /* Block Headline Summary */
-/* line 220, scss/objects/_blocks.scss */
+/* line 222, scss/objects/_blocks.scss */
 .block-headline-summary a {
   display: block;
   padding: 0.5em;
 }
 
 /* Block Inset */
-/* line 227, scss/objects/_blocks.scss */
+/* line 229, scss/objects/_blocks.scss */
 .block-inset {
   position: relative;
   width: 100%;
   max-height: 360px;
 }
-/* line 232, scss/objects/_blocks.scss */
+/* line 234, scss/objects/_blocks.scss */
 .block-inset .b-thumb {
   position: relative;
   z-index: 0;
 }
-/* line 236, scss/objects/_blocks.scss */
+/* line 238, scss/objects/_blocks.scss */
 .block-inset .b-thumb img {
   display: block;
 }
 
 /* Hero Block */
-/* line 243, scss/objects/_blocks.scss */
+/* line 245, scss/objects/_blocks.scss */
 .block-inset {
   margin-bottom: 0.5em;
   position: relative;
 }
-/* line 247, scss/objects/_blocks.scss */
+/* line 249, scss/objects/_blocks.scss */
 .block-inset .headline {
   font-size: 1.1em;
 }
-/* line 251, scss/objects/_blocks.scss */
+/* line 253, scss/objects/_blocks.scss */
 .block-inset .b-text {
   position: absolute;
   bottom: 0;
@@ -2636,12 +2641,12 @@ body .wrapper:first-child {
 }
 
 /* Block Thumb with Summary */
-/* line 264, scss/objects/_blocks.scss */
+/* line 266, scss/objects/_blocks.scss */
 .block-thumb-summary .b-thumb {
   float: left;
   width: 50%;
 }
-/* line 269, scss/objects/_blocks.scss */
+/* line 271, scss/objects/_blocks.scss */
 .block-thumb-summary .b-text {
   margin-left: 50%;
   padding: 0.5em;
